Compiler/src/main/java/Testing/Tests/SyntacticTests/passing/startSolo.ru
/? Descripción: caso de prueba que se fija si start solo es aceptado sin errores
/? Salida esperada:
/? CORRECTO: ANALISIS SINTACTICO

start {}