Compiler/src/main/java/Testing/Tests/SyntacticTests/failing/structButNoStart.ru
/? Descripción: caso de prueba que se fija si se acepta un programa sin start
/? Salida esperada:
/? ERROR: SINTÁCTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 7 | COLUMNA 1 | Se esperaba: start y llegó: $EOF$
struct EstasDebugeando {}